waybar/style.css
* {
  /* You must use here a Propo font from NerdFonts. */
  font-family: 'JetbrainsMono Nerd Font Propo';
  font-weight: 500;
  font-size: 14px;
  color: #eeeeee;
  border: none;
  border-radius: 0;
  min-height: 0;
  margin: 0;
  padding: 0;
  box-shadow: none;
  text-shadow: none;
  background: none;
}

.module {
  padding: 0px 10px 0px 10px;
  min-width: 18px;
}

window#waybar {
  background: rgba(15, 15, 15, 0.70);
}

#battery.charging,
#battery.plugged,
#battery.full {
  color: rgb(129, 241, 129);
}

.module:not(#clock):not(#tray):not(#workspaces):not(#custom-slash1):not(#custom-arrow-icon):not(#custom-slash0):not(#custom-slash1):not(#custom-self):not(#custom-icon):hover {
  background: #eeeeee;
  color: #151515;
}

tooltip box {
  border-radius: 8px;
  background: rgba(15, 15, 15, 0.90);
  padding: 10px;
  border: solid 2px #5a5a5a;
}

menu {
  background: rgba(15, 15, 15, 0.90);
  border-radius: 6px;
  padding: 8px 0px;
}

menuitem label {
  font-family: "Inter";
}

menuitem {
  /* border-radius: 4px; */
  padding: 5px 3px;
  border-left: solid 2px transparent;
}

menuitem:hover {
  background: #b8b8b8;
  border-left: solid 4px rgb(68, 85, 179);
}

menuitem:hover label {
  color: black;
}

menuitem:disabled label,
menuitem:insensitive label,
menuitem:disabled image {
  color: #464b63;
}

#custom-arrow-icon {
  padding: 0;
  font-size: 22px;
  color: #eeeeee;
}

#workspaces button {
  margin: 3px 2px;
  padding: 0px 2px;
  border-radius: 4px;
}

#workspaces button.active {
  background: #eeeeee;
}

#workspaces button.active label {
  color: black;
}

#custom-icon {
  color: rgb(68, 85, 179);
  font-size: 22px;
  background: #eeeeee;
}

/* Wireplumber specials */

#wireplumber.muted {
  color: #fa6767;
}

